--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,12 @@
 version: '3.8'
 
 services:
-  app:
+  server:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: cosmic-requiem-backend
     restart: unless-stopped
-    ports:
-      - "5000:5000"
     environment:
       - NODE_ENV=production
       - PORT=5000
@@ -19,10 +17,12 @@ services:
         condition: service_healthy
       redis:
         condition: service_healthy
+    volumes:
+      - ./data:/app/data
     networks:
       - app-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:5000/api"]
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:5000"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -64,6 +64,31 @@ services:
       interval: 10s
       timeout: 3s
       retries: 5
+
+  nginx:
+    image: nginx:alpine
+    container_name: cosmic-requiem-nginx
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./certbot/www:/var/www/certbot:rw
+      - ./certbot/conf:/etc/letsencrypt:rw
+    depends_on:
+      - server
+    networks:
+      - app-network
+
+  certbot:
+    image: certbot/certbot:latest
+    container_name: cosmic-requiem-certbot
+    volumes:
+      - ./certbot/www:/var/www/certbot:rw
+      - ./certbot/conf:/etc/letsencrypt:rw
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
 
 volumes:
   postgres_data:
