--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,6 @@ services:
       dockerfile: Dockerfile
     container_name: cosmic-requiem-backend
     restart: unless-stopped
-    environment:
-      - NODE_ENV=production
-      - PORT=5000
     env_file:
       - .env
     depends_on:
@@ -17,14 +14,16 @@ services:
         condition: service_healthy
     volumes:
       - ./data:/app/data
+    ports:
+      - "5000:5000"
     networks:
       - app-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:5000"]
-      interval: 30s
-      timeout: 10s
+      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:5000/health"]
+      interval: 10s
+      timeout: 5s
       retries: 3
-      start_period: 40s
+      start_period: 5s
 
   postgres:
     image: postgres:16-alpine
@@ -95,4 +94,3 @@ volumes:
 networks:
   app-network:
     driver: bridge
-
