--- a/nginx/conf.d/default.conf.template
+++ b/nginx/conf.d/default.conf.template
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name ${NGINX_DOMAIN};
+    server_name ${NGINX_BASE_DOMAIN};
 
     location /.well-known/acme-challenge/ {
         alias /var/www/certbot/.well-known/acme-challenge/;
@@ -15,10 +15,58 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name ${NGINX_DOMAIN};
+    server_name ${NGINX_BASE_DOMAIN};
 
-    ssl_certificate /etc/letsencrypt/live/${NGINX_DOMAIN}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${NGINX_DOMAIN}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/${NGINX_BASE_DOMAIN}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/${NGINX_BASE_DOMAIN}/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+
+    client_max_body_size 10M;
+
+    location /.well-known/acme-challenge/ {
+        alias /var/www/certbot/.well-known/acme-challenge/;
+        allow all;
+        try_files $uri =404;
+    }
+
+    location ~ /\.(?!well-known) {
+        deny all;
+    }
+
+    location / {
+        return 404;
+    }
+}
+
+server {
+    listen 80;
+    server_name api.${NGINX_BASE_DOMAIN};
+
+    location /.well-known/acme-challenge/ {
+        alias /var/www/certbot/.well-known/acme-challenge/;
+        allow all;
+        try_files $uri =404;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl http2;
+    server_name api.${NGINX_BASE_DOMAIN};
+
+    ssl_certificate /etc/letsencrypt/live/api.${NGINX_BASE_DOMAIN}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/api.${NGINX_BASE_DOMAIN}/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
@@ -59,7 +107,7 @@ server {
 
 server {
     listen 80;
-    server_name ${NGINX_ADMIN_DOMAIN};
+    server_name admin.${NGINX_BASE_DOMAIN};
 
     location /.well-known/acme-challenge/ {
         alias /var/www/certbot/.well-known/acme-challenge/;
@@ -74,10 +122,10 @@ server {
 
 server {
     listen 443 ssl http2;
-    server_name ${NGINX_ADMIN_DOMAIN};
+    server_name admin.${NGINX_BASE_DOMAIN};
 
-    ssl_certificate /etc/letsencrypt/live/${NGINX_ADMIN_DOMAIN}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${NGINX_ADMIN_DOMAIN}/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/admin.${NGINX_BASE_DOMAIN}/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/admin.${NGINX_BASE_DOMAIN}/privkey.pem;
 
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
