--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
       target: frontend-builder
       args:
-        - VITE_API_URL=${VITE_API_URL:-http://api.kosmo-requiem.ru}
+        - VITE_API_URL=${VITE_API_URL}
     container_name: cosmic-requiem-admin-init
     command: sh -c "mkdir -p /admin-dist && cp -r /app/dist/* /admin-dist/ && ls -la /admin-dist"
     volumes:
