--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
     command: >
       postgres
-      -c max_connections=200
+      -c max_connections=100
       -c shared_buffers=256MB
       -c effective_cache_size=1GB
       -c maintenance_work_mem=64MB
@@ -78,6 +78,11 @@ services:
       -c min_wal_size=1GB
       -c max_wal_size=4GB
       -c log_min_duration_statement=1000
+      -c statement_timeout=30000
+      -c idle_in_transaction_session_timeout=60000
+      -c tcp_keepalives_idle=600
+      -c tcp_keepalives_interval=30
+      -c tcp_keepalives_count=3
     volumes:
       - postgres-data:/var/lib/postgresql/data
     ports:
