--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,7 +99,20 @@ services:
     image: redis:7-alpine
     container_name: cosmic-requiem-redis
     restart: unless-stopped
-    command: redis-server --requirepass ${REDIS_PASSWORD} --appendonly yes --save "" --stop-writes-on-bgsave-error no
+    command: >
+      redis-server
+      --requirepass ${REDIS_PASSWORD}
+      --appendonly yes
+      --save ""
+      --stop-writes-on-bgsave-error no
+      --maxmemory 256mb
+      --maxmemory-policy allkeys-lru
+      --tcp-backlog 511
+      --timeout 300
+      --tcp-keepalive 300
+      --lazyfree-lazy-eviction yes
+      --lazyfree-lazy-expire yes
+      --lazyfree-lazy-server-del yes
     environment:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
     ports:
